saving a record of all URLs => hashed fname

--- a/10_transfer-images-http.ipynb
+++ b/10_transfer-images-http.ipynb
@@ -1144,7 +1144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks like there are a TON of duplicates! Which images are duplicated the most in the API's database? "
+    "Which images are duplicated the most in the API's database? "
    ]
   },
   {
