re-run image saving code

--- a/10_transfer-images-http.ipynb
+++ b/10_transfer-images-http.ipynb
@@ -8,27 +8,17 @@
     "\n",
     "Here's what we need to do to transfer over the raw image data so it's no longer in the database.\n",
     "\n",
-    "1. Determine that the size of the DO Space we've chosen will be big enough to last a long time. What is the current size of the images in the DB? How fast do we expect the space usage to grow, given reasonable assumptions about how many keywords we're using?\n",
-    "2. Get a list of all images we're going to query for\n",
-    "3. Update the API so that saving all new images will save to the DO Space rather than the database\n",
-    "4. Get the image binary data of an image, save it with the new API image save endpoint, then check that any query that includes that image metadata links to the new DO Space image URL\n",
-    "5. run for all images"
+    "1. Get a list of all images from the API\n",
+    "2. Download all images into a temp folder, with the name determined from an image hash\n",
+    "3. Sanity & integrity checks\n",
+    "4. Upload folder to Digital Ocean Space"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. size of Space\n",
-    "\n",
-    "I'll check back on this after transfering over all the images from the DB."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. list of all images to query\n",
+    "### 1. list of all images to query\n",
     "\n",
     "I have node running the server.js file in the api folder on my test server, which has the same database as prod."
    ]
@@ -82,32 +72,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pages = {}\n",
-    "# for i in range(5000):\n",
-    "#     img_page = requests.get(base + f'/images?page={i}')\n",
-    "#     pages[i] = img_page.json()\n",
-    "#     if len(pages[i]) == 0:\n",
-    "#         break\n",
-    "#     if i%100 == 0:\n",
-    "#         print(i, pages[i][0]['image_href'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# with open('image_pages.json', 'w') as f:\n",
-    "#     f.write(json.dumps(pages))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -145,14 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. update API to save images to DO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. setup for bulk image upload to DO"
+    "### 1a. image saving functions"
    ]
   },
   {
@@ -203,14 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. run for all images"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set up Digital Ocean"
+    "### 2. download all images"
    ]
   },
   {
@@ -227,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is slow code which gets the images from their original URLs and puts them on DO, but only needs to be run once."
+    "Set up an object that can track the status of the overall job with inputs from all the threads."
    ]
   },
   {
@@ -302,13 +252,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the cached responses from formerly requesting all the images from the API."
+    "This... is gonna take a while."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -879,6 +834,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 3. Sanity & integrity checks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Check all image URLs in the list against their corresponding filenames in the folder."
    ]
   },
@@ -1036,7 +998,12 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1162,7 +1129,12 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1182,11 +1154,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 4. Upload to Digital Ocean Space\n",
+    "\n",
+    "Use [s3cmd](https://docs.digitalocean.com/products/spaces/resources/s3cmd/) and run the command for uploading an entire folder (see [documentation](https://docs.digitalocean.com/products/spaces/resources/s3cmd-usage/)): `s3cmd put * s3://firewall-cafe-space/images/hashes/ --recursive`"
+   ]
   }
  ],
  "metadata": {
