--- a/6_firewall-api.ipynb
+++ b/6_firewall-api.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "last run: 2021-05-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "today = date.today()\n",
+    "print(\"last run:\", today)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,10 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import requests"
    ]
   },
@@ -25,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_URL = 'http://159.89.80.47/'\n",
-    "# BASE_URL = 'http://api.firewallcafe.com/'"
+    "# BASE_URL = 'http://159.89.80.47/'\n",
+    "BASE_URL = 'http://test-api.firewallcafe.com/'"
    ]
   },
   {
@@ -42,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,53 +107,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "searches                                             1.3 seconds 200\n",
-      "\t first query info: obama\n",
-      "searches/search_id/1                                 0.5 seconds 200\n",
+      "searches                                             0.4 seconds 200\n",
+      "\t first query info: test\n",
+      "searches/search_id/1                                 0.2 seconds 200\n",
       "\t first query info: football\n",
-      "searches/images                                      1.4 seconds 200\n",
-      "\t first query info: coronavirus\n",
-      "searches/images/search_id/1                          0.7 seconds 200\n",
+      "searches/images                                      0.9 seconds 200\n",
+      "\t first query info: test\n",
+      "searches/images/search_id/1                          0.4 seconds 200\n",
       "\t first query info: football\n",
-      "searches/votes                                       0.5 seconds 500\n",
-      "searches/votes/search_id/1                           0.6 seconds 200\n",
-      "searches/votes/vote_id/1                             3.2 seconds 200\n",
+      "searches/votes                                       0.4 seconds 200\n",
+      "\t first query info: test, Censored\n",
+      "searches/votes/search_id/1                           0.2 seconds 200\n",
+      "searches/votes/vote_id/1                             0.8 seconds 200\n",
       "\t first query info: blond jenny artist, Censored\n",
-      "searches/votes/censored_searches                     2.7 seconds 200\n",
+      "searches/votes/censored_searches                     0.8 seconds 200\n",
       "\t first query info: shen yun\n",
-      "searches/votes/uncensored_searches                   2.8 seconds 200\n",
+      "searches/votes/uncensored_searches                   0.6 seconds 200\n",
       "\t first query info: black jesus\n",
-      "searches/votes/bad_translation_searches              2.7 seconds 200\n",
+      "searches/votes/bad_translation_searches              0.6 seconds 200\n",
       "\t first query info: history of women's suffrage\n",
-      "searches/votes/good_translation_searches             6.7 seconds 200\n",
+      "searches/votes/good_translation_searches             1.2 seconds 200\n",
       "\t first query info: venezuela\n",
-      "searches/votes/nsfw_searches                         3.5 seconds 200\n",
+      "searches/votes/nsfw_searches                         0.7 seconds 200\n",
       "\t first query info: black jesus\n",
-      "searches/votes/wtf_searches                          0.8 seconds 200\n",
+      "searches/votes/wtf_searches                          0.3 seconds 200\n",
       "\t first query info: history of women's suffrage\n",
-      "searches/votecounts                                 10.2 seconds 200\n",
+      "searches/votecounts                                  2.8 seconds 200\n",
       "\t first query info: venezuela\n",
-      "searches/1/votecounts                                0.5 seconds 200\n",
+      "searches/1/votecounts                                0.2 seconds 200\n",
       "\t first query info: football\n",
-      "searches/votecounts/images                          14.8 seconds 200\n",
+      "searches/votecounts/images                           1.9 seconds 200\n",
+      "\t first query info: test\n",
+      "searches/1/votecounts/images                         0.3 seconds 200\n",
       "\t first query info: football\n",
-      "searches/1/votecounts/images                         0.9 seconds 200\n",
-      "\t first query info: football\n",
-      "images                                               0.8 seconds 200\n",
-      "images/search_id/1                                   0.6 seconds 200\n",
-      "images/censored_searches                             0.8 seconds 200\n",
-      "images/uncensored_searches                           0.6 seconds 200\n",
-      "images/bad_translation_searches                      1.0 seconds 200\n",
-      "images/good_translation_searches                     0.6 seconds 200\n",
-      "images/nsfw_searches                                 0.6 seconds 200\n",
-      "images/wtf_searches                                  0.9 seconds 200\n"
+      "images                                               0.3 seconds 200\n",
+      "images/search_id/1                                   0.2 seconds 200\n",
+      "images/censored_searches                             0.2 seconds 500\n",
+      "images/uncensored_searches                           0.2 seconds 500\n",
+      "images/bad_translation_searches                      0.2 seconds 500\n",
+      "images/good_translation_searches                     0.2 seconds 500\n",
+      "images/nsfw_searches                                 0.2 seconds 500\n",
+      "images/wtf_searches                                  0.2 seconds 500\n"
      ]
     }
    ],
@@ -179,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1611914576.87813"
+       "1620984226.664925"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +267,7 @@
        "  'wordpress_search_result_post_slug': 'football-1454979377'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('api-config.json') as f:\n",
+    "    secret = json.loads(f.read())['secret']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,21 +315,22 @@
     "        'search_term_translation_language_code': None,\n",
     "        'search_term_status_banned': False,\n",
     "        'search_term_status_sensitive': False,\n",
-    "        'search_schema_initial':0\n",
+    "        'search_schema_initial':0,\n",
+    "        'secret': secret\n",
     "    })\n",
     "    return r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "search 5739 in DB\n"
+      "search 5764 in DB\n"
      ]
     }
    ],
@@ -323,14 +356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "could not find 5740\n"
+      "could not find 5765\n"
      ]
     },
     {
@@ -339,7 +372,7 @@
        "False"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,23 +383,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "search 5740 in DB\n"
+      "search 5765 in DB\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'search_id': 5740}]"
+       "[{'search_id': 5765}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,14 +429,15 @@
     "        'search_id': search_id,\n",
     "        'vote_timestamp': int(datetime.utcnow().timestamp()),\n",
     "        'vote_client_name': 'rowan_tests',\n",
-    "        'vote_ip_address': '192.168.0.1'\n",
+    "        'vote_ip_address': '192.168.0.1', \n",
+    "        'secret': secret\n",
     "    })\n",
     "    return r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +505,7 @@
        "  'wordpress_search_result_post_slug': 'ceo-1455141099'}]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +525,7 @@
        "[]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,40 +536,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Response [201]>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [201]> []\n"
+     ]
     }
    ],
    "source": [
-    "create_vote(last_id_used)"
+    "r = create_vote(last_id_used)\n",
+    "print(r, r.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'vote_name': 'Censored',\n",
-       "  'vote_serial': 6102,\n",
+       "  'vote_serial': 6106,\n",
        "  'vote_id': 1,\n",
-       "  'search_id': 5739,\n",
-       "  'vote_timestamp': '1611914583',\n",
+       "  'search_id': 5764,\n",
+       "  'vote_timestamp': '1620984228',\n",
        "  'vote_client_name': 'rowan_tests',\n",
        "  'vote_ip_address': '192.168.0.1',\n",
-       "  'search_timestamp': '1611914577',\n",
+       "  'search_timestamp': '1620984226',\n",
        "  'search_location': 'new_york_city',\n",
        "  'search_ip_address': None,\n",
        "  'search_client_name': 'rowan_scraper_tests',\n",
@@ -558,7 +590,7 @@
        "  'wordpress_search_result_post_slug': None}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,39 +617,13 @@
     "        'search_id': search_id,\n",
     "        'image_search_engine': 'test',\n",
     "        'image_href': 'https://firewallcafe.com/wp-content/themes/fwc/img/logo-firewall-generic.svg?1578614316',\n",
-    "        'image_rank': 0\n",
+    "        'image_href_original': 'https://firewallcafe.com/thisisatest.jpg',\n",
+    "        'image_rank': 0,\n",
+    "        'secret': secret\n",
     "    })\n",
-    "    return r.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "create_image(last_id_used)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_images(search_id):\n",
-    "    r = requests.get(BASE_URL + 'images/search_id/' + str(search_id))\n",
+    "    if r.status_code >= 300:\n",
+    "        print(r.json())\n",
+    "        raise Exception(\"create_image failed\")\n",
     "    return r.json()"
    ]
   },
@@ -629,16 +635,118 @@
     {
      "data": {
       "text/plain": [
-       "[{'image_id': 197468,\n",
+       "{'url': 'https://firewallcafe.com/wp-content/themes/fwc/img/logo-firewall-generic.svg?1578614316',\n",
+       " 'query_result': {'command': 'INSERT',\n",
+       "  'rowCount': 1,\n",
+       "  'oid': 0,\n",
+       "  'rows': [],\n",
+       "  'fields': [],\n",
+       "  '_types': {'_types': {'arrayParser': {},\n",
+       "    'builtins': {'BOOL': 16,\n",
+       "     'BYTEA': 17,\n",
+       "     'CHAR': 18,\n",
+       "     'INT8': 20,\n",
+       "     'INT2': 21,\n",
+       "     'INT4': 23,\n",
+       "     'REGPROC': 24,\n",
+       "     'TEXT': 25,\n",
+       "     'OID': 26,\n",
+       "     'TID': 27,\n",
+       "     'XID': 28,\n",
+       "     'CID': 29,\n",
+       "     'JSON': 114,\n",
+       "     'XML': 142,\n",
+       "     'PG_NODE_TREE': 194,\n",
+       "     'SMGR': 210,\n",
+       "     'PATH': 602,\n",
+       "     'POLYGON': 604,\n",
+       "     'CIDR': 650,\n",
+       "     'FLOAT4': 700,\n",
+       "     'FLOAT8': 701,\n",
+       "     'ABSTIME': 702,\n",
+       "     'RELTIME': 703,\n",
+       "     'TINTERVAL': 704,\n",
+       "     'CIRCLE': 718,\n",
+       "     'MACADDR8': 774,\n",
+       "     'MONEY': 790,\n",
+       "     'MACADDR': 829,\n",
+       "     'INET': 869,\n",
+       "     'ACLITEM': 1033,\n",
+       "     'BPCHAR': 1042,\n",
+       "     'VARCHAR': 1043,\n",
+       "     'DATE': 1082,\n",
+       "     'TIME': 1083,\n",
+       "     'TIMESTAMP': 1114,\n",
+       "     'TIMESTAMPTZ': 1184,\n",
+       "     'INTERVAL': 1186,\n",
+       "     'TIMETZ': 1266,\n",
+       "     'BIT': 1560,\n",
+       "     'VARBIT': 1562,\n",
+       "     'NUMERIC': 1700,\n",
+       "     'REFCURSOR': 1790,\n",
+       "     'REGPROCEDURE': 2202,\n",
+       "     'REGOPER': 2203,\n",
+       "     'REGOPERATOR': 2204,\n",
+       "     'REGCLASS': 2205,\n",
+       "     'REGTYPE': 2206,\n",
+       "     'UUID': 2950,\n",
+       "     'TXID_SNAPSHOT': 2970,\n",
+       "     'PG_LSN': 3220,\n",
+       "     'PG_NDISTINCT': 3361,\n",
+       "     'PG_DEPENDENCIES': 3402,\n",
+       "     'TSVECTOR': 3614,\n",
+       "     'TSQUERY': 3615,\n",
+       "     'GTSVECTOR': 3642,\n",
+       "     'REGCONFIG': 3734,\n",
+       "     'REGDICTIONARY': 3769,\n",
+       "     'JSONB': 3802,\n",
+       "     'REGNAMESPACE': 4089,\n",
+       "     'REGROLE': 4096}},\n",
+       "   'text': {},\n",
+       "   'binary': {}},\n",
+       "  'RowCtor': None,\n",
+       "  'rowAsArray': False}}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_image(last_id_used)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_images(search_id):\n",
+    "    r = requests.get(BASE_URL + 'images/search_id/' + str(search_id))\n",
+    "    return r.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'image_id': 216262,\n",
        "  'image_search_engine': 'test',\n",
        "  'image_href': 'https://firewallcafe.com/wp-content/themes/fwc/img/logo-firewall-generic.svg?1578614316',\n",
+       "  'image_href_original': 'https://firewallcafe.com/thisisatest.jpg',\n",
        "  'image_rank': '0',\n",
        "  'image_mime_type': None,\n",
        "  'wordpress_attachment_post_id': None,\n",
        "  'wordpress_attachment_file_path': None}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,14 +792,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://159.89.80.47/\n",
+      "http://test-api.firewallcafe.com/\n",
       "  searches\n",
       "  searches/images\n",
       "  searches/votes\n",
@@ -732,13 +840,6 @@
     "    else:\n",
     "        print(' ', endpoint)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
